Agrego carrito de compra

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,12 +3,14 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PetStore;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Stripe": {
-    "SecretKey": "sk_test_...",
-    "PublishableKey": "pk_test_...",
-    "WebhookSecret": "whsec_..."
+    "PublishableKey": "",
+    "SecretKey": "",
+    "WebhookSecret": ""
   },
-  "Jwt": {
-    "Key": "tu-clave-super-secreta-aqui-32-caracteres"
+  "JwtSettings": {
+    "SecretKey": "",
+    "Issuer": "",
+    "Audience": ""
   },
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
